--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -11,21 +11,35 @@
     {
         <MudGrid Spacing="1">
             <MudItem xs="12">
-                <MudPaper Height="60px" Class="pa-2">
-                    <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                        <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
-                            @if (Model.Race.State == State.Active)
-                            {
-                                <MudButton OnClick="GoToPractice">Practice</MudButton>
-                                <MudButton OnClick="GoToQualifying">Qualifying</MudButton>
-                            }
-                            else if (Model.Race.State != State.Concept)
-                            {
-                                <MudButton OnClick="GoToRace">Race</MudButton>
-                            }
-                        </MudButtonGroup>
-                        <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
-                        <ScreenshotButton TargetId="raceweek-container" />
+                <MudPaper MinHeight="60px" Class="pa-2">
+                    <MudStack Row="true" Spacing="0" Justify="Justify.Center" AlignItems="AlignItems.Center">
+                        <div style="width:33%">
+                            <MudStack Spacing="1">
+                                <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
+                                    @for (int i = 1; i <= Model.PracticeCompletedCount; i++)
+                                    {
+                                        int j = i;
+                                        <MudButton FullWidth="true" OnClick="@(() => GoToPractice(j))">Practice-@(j)</MudButton>
+                                    }
+
+                                    @if (Model.Race.State != State.Advanced && Model.Race.State != State.Closed)
+                                    {
+                                        <MudButton FullWidth="true" OnClick="@(() => GoToPractice(nextPractice))">Practice-@(nextPractice)</MudButton>
+                                    }
+                                </MudButtonGroup>
+                                <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToQualifying">Qualifying</MudButton>
+                                @if (Model.Race.State != State.Concept && Model.Race.State != State.Active)
+                                {
+                                    <MudButton Color="Color.Secondary" Variant="Variant.Outlined" OnClick="GoToRace">Race</MudButton>
+                                }
+                            </MudStack>
+                        </div>
+                        <div class="text-center" style="width:33%">
+                            <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
+                        </div>
+                        <div style="width:33%">
+                            <ScreenshotButton TargetId="raceweek-container" Styles="@("float:right")" />
+                        </div>
                     </MudStack>
                 </MudPaper>
             </MudItem>
@@ -58,7 +72,7 @@
                             @foreach (var trait in Model.TrackTraits)
                             {
                                 <MudListItem>
-                                    <MudStack Spacing="0">
+                                    <MudStack Spacing="1">
                                         <MudText Typo="Typo.subtitle2">@trait.Name</MudText>
                                         <MudDivider />
                                         <MudText Typo="Typo.body2">@trait.Description</MudText>
@@ -146,11 +160,14 @@
     private List<Tyre> Tyres { get; set; }
 
     private bool loading = true;
+    private int nextPractice = 1;
 
     protected override async Task OnInitializedAsync()
     {
         Model = await _raceService.GetRaceWeekModel(RaceId);
         Tyres = await _tyreService.GetTyres();
+
+        nextPractice = 1 + Model.PracticeCompletedCount;
 
         _bread.Reset();
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
@@ -184,10 +201,7 @@
     }
 
     // Navigation links
-    private void GoToPractice() => _nav.NavigateTo($"/practice/{RaceId}");
-    private void GoToQualifying()
-    {
-        _nav.NavigateTo($"/qualifying/{RaceId}");
-    }
+    private void GoToPractice(int num) => _nav.NavigateTo($"/practice/{RaceId}/{num}");
+    private void GoToQualifying() => _nav.NavigateTo($"/qualifying/{RaceId}");
     private void GoToRace() => _nav.NavigateTo($"/race/{RaceId}");
 }
