--- a/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
+++ b/SimTECH/SimTECH/Pages/Season/ScoreStandings/Standings.razor
@@ -10,9 +10,9 @@
                 <MudItem xs="12">
                     <MudPaper Height="75px" Class="pa-2">
                         <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
-                            <span></span>
+                            <span style="width:10%"></span>
                             <MudText Typo="Typo.h3">Season standings @(Season.Year)</MudText>
-                            <ScreenshotButton TargetId="standings-numerical-overview" />
+                            <ScreenshotButton TargetId="standings-numerical-overview" Styles="@("width:10%")" />
                         </MudStack>
                     </MudPaper>
                 </MudItem>
