--- a/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/SingleSessionQualy.razor
@@ -86,10 +86,8 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public QualifyingModel Model { get; set; }
-    [Parameter]
-    public EventCallback CallbackFinish { get; set; }
+    [CascadingParameter] public QualifyingModel Model { get; set; }
+    [Parameter] public EventCallback CallbackFinish { get; set; }
 
     private int advanced = 0;
     private double gapMarge;
@@ -105,6 +103,9 @@
         bestScoresPerSession = new int[Model.AmountRuns];
 
         gapMarge = _config.Value.GapMarge;
+
+        if (Model.IsFinished)
+            SetExistingScores();
     }
 
     private void Advance()
@@ -127,5 +128,31 @@
         }
 
         advanced++;
+    }
+
+    private void SetExistingScores()
+    {
+        for (int i = 0; i < Model.AmountRuns; i++)
+        {
+            foreach (var driver in Model.QualifyingDrivers)
+            {
+                var score = driver.RunValuesQ1[i];
+
+                if (score > highestScore)
+                    highestScore = score;
+                else if (score < lowestScore)
+                    lowestScore = score;
+            }
+
+            worstScoresPerSession[i] = lowestScore;
+            bestScoresPerSession[i] = highestScore;
+        }
+
+        var positionIndex = 0;
+        foreach (var driver in Model.QualifyingDrivers.OrderByDescending(e => e.MaxScoreQ1))
+        {
+            driver.PositionQ1 = ++positionIndex;
+            driver.GapQ1 = Math.Round(((highestScore - driver.MaxScoreQ1) * gapMarge), 2);
+        }
     }
 }
