--- a/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
+++ b/SimTECH/SimTECH/Pages/UserManual/Topics/Race/Racing.razor
@@ -1,56 +1,8 @@
 ﻿<MudPaper>
-    <MudText Typo="Typo.h6">Score calculation</MudText>
-    <MudText>
-        Every advance, the following aspects impact the score
-    </MudText>
-    <MudSimpleTable>
-        <thead>
-            <tr>
-                <th>Type</th>
-                <th>How is it determined?</th>
-                <th>Frequency</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>RNG</td>
-                <td>Minimum and maximum RNG are set in season settings</td>
-                <td>Every advance</td>
-            </tr>
-            <tr>
-                <td>Qualifying bonus</td>
-                <td>Set grid bonus * position from last</td>
-                <td>First advance</td>
-            </tr>
-            <tr>
-                <td>Mistakes</td>
-                <td></td>
-                <td>Every advance</td>
-            </tr>
-            <tr>
-                <td>Tyre life</td>
-                <td>Pace of tyre minus aggregrated wear</td>
-                <td>Every advance</td>
-            </tr>
-            <tr>
-                <td>Pitstop</td>
-                <td>RNG value between what is set in season settings</td>
-                <td>Active tyre wears out</td>
-            </tr>
-            <tr>
-                <td>Power</td>
-                <td>Total number of driver skill, car speed, engine power and any modifiers to race pace</td>
-                <td>Every advance</td>
-            </tr>
-        </tbody>
-    </MudSimpleTable>
-
+    <MudText Typo="Typo.h6">Racing</MudText>
     <MudDivider Class="my-1" />
-
-    <MudText Typo="Typo.h6">Pitstop</MudText>
     <MudText>
-        Occurs when a tyre used by a strategy starts to reach a number below zero
-        AND if there is a tyre left inside driver's the proposed strategy
+        It's what we do, in this section you can read up more about the racing process and the calculations in it.
     </MudText>
 </MudPaper>
 
